--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./styles/mediaqueries.css">
 </head>
 <body>
-    <nav id="nav-links">
-        <div class="logo">Abdullah</div>
+    <nav id="desktop-nav">
+        <div class="logo">ABDULLAH</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -17,6 +17,36 @@
                 <li><a href="#projects" class="nav-link">Projetcs</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
+        </div>
+    </nav>
+
+    <nav id="hamburger-nav">
+        <div class="logo">ABDULLAH</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="menu-links">
+            <li>
+                <a href="#about"   onclick="toggleMenu()">About</a>
+            </li>
+            <li>
+                <a href="#experience"
+                click="toggleMenu()">Experience
+                </a>
+            </li>
+            <li>
+                <a href="#projets" onclick="toggleMenu()">Projets
+                </a>
+            </li>
+            <li>
+                <a href="#contact"
+                click="toggleMenu()">Contact
+                </a>
+            </li>
+        </div>
         </div>
     </nav>
     <script src="./js/script.js"></script>
