--- a/index.html
+++ b/index.html
@@ -49,6 +49,39 @@
         </div>
         </div>
     </nav>
+
+    <section id="profile">
+        <div class="section__pic-container">
+          <img src="./assets/profile-pic.png" alt="profile picture"/>
+        </div>
+        <div class="section__text">
+          <p class="section__text__p1">Hello, I'm</p>
+          <h1 class="title">Abdullah</h1>
+          <p class="section__text__p2">Web Developer</p>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 js-download-cv">
+              Download CV
+            </button>
+            <button class="btn btn-color-1 js-contact-info">
+              Contact Info
+            </button>
+          </div>
+          <div id="socials-container">
+            <img
+              src="./assets/linkedin.png"
+              alt="My LinkedIn profile"
+              class="icon"
+              onclick="location.href='#'"
+            />
+            <img
+              src="./assets/github.png"
+              alt="My Github profile"
+              class="icon js-github-profile"
+            />
+          </div>
+        </div>
+      </section>
     <script src="./js/script.js"></script>
 </body>
 </html>
