--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
 
     <section id="profile">
-        <div class="section__pic-container">
-          <img src="./assets/profile-pic.png" alt="profile picture"/>
+        <div class="section__pic-container profile-pic-rounded">
+          <img src="./assets/profile-pic-3.png" alt="profile picture"/>
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello, I'm</p>
@@ -81,7 +81,41 @@
             />
           </div>
         </div>
-      </section>
+    </section>
+
+    <section id="about">
+        <p class="section__text__p1">
+            Get To Know More
+        </p>        
+        <h1 class="title">About Me</h1>
+
+        <div class="section-container">
+        <div class="section__pic-container">
+            <img src="./assets/seconde pic.jpg" alt="about pic" class="about-pic"/>
+        </div>
+        <div class="about-details-container">
+            <div class="about-container">
+                <div class="details-container">
+                    <img src="./assets/experience.png" alt="Experience icon" class="icon"/>
+                    <h3>Experience</h3>
+                    <p>2+ years <br>
+                    Frontend Development</p>
+                </div>
+                <div class="details-container">
+                    <img src="./assets/education.png" alt="Education icon" class="icon"/>
+                    <h3>Education</h3>
+                    <p>Diploma in Engineering<br>
+                    Compute Science</p>
+                </div>
+            </div>
+            <div class="text-container">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dicta assumenda doloremque id magnam repudiandae error qui aliquam sint recusandae. Corporis exercitationem quo reiciendis magni, molestias ab. Tempore odio sit voluptatibus earum et tenetur facilis beatae animi ducimus harum. Aliquam itaque veritatis dolore corporis officia porro quam eligendi adipisci consequatur.</p>
+            </div>
+        </div>
+    </div>
+    <img src="./assets/arrow.png" class="icon arrow js-arrow" alt="">
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
