--- a/index.html
+++ b/index.html
@@ -206,6 +206,58 @@
     <img src="./assets/arrow.png" class="icon arrow js-arrow-to-projects" alt="">
 </section>
 
+<section id="projects">
+    <p class="section__text__p1">Browse My Recent</p>
+    <h1 class="title">Projects</h1>
+    <div class="experience-details-container">
+        <div class="about-container">
+        <div class="details-container color-container">
+            <div class="articel-container">
+                <img src="./assets/project-1.png" alt="project 1" class="project-img">
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Project One
+                </button>
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Live Demo
+                </button>
+            </div>
+        </div>
+        <div class="details-container color-container">
+            <div class="articel-container">
+                <img src="./assets/project-2.png" alt="project 1" class="project-img">
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Project Two
+                </button>
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Live Demo
+                </button>
+            </div>
+        </div>
+        <div class="details-container color-container">
+            <div class="articel-container">
+                <img src="./assets/project-3.png" alt="project 1" class="project-img">
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Project Three
+                </button>
+                <button class="btn btn-color-2 project-btn js-project-link">
+                    Live Demo
+                </button>
+            </div>
+        </div>
+    </div>
+    </div>
+    <img src="./assets/arrow.png" class="icon arrow js-arrow-to-contact" alt="">
+</section>
+
 
     <script src="./js/script.js"></script>
 </body>
