--- a/index.html
+++ b/index.html
@@ -258,6 +258,37 @@
     <img src="./assets/arrow.png" class="icon arrow js-arrow-to-contact" alt="">
 </section>
 
+<section id="contact">
+    <p class="section__text__p1">Get In Touch</p>
+    <h1 class="title">Contact Me</h1>
+    <div class="contact-info-upper-container">    
+        <div class="contact-info-container">
+            <img src="./assets/email.png" alt="email icon" class="icon">
+        <p>
+            <a href="mailto:binbean44@gmail.com">
+                binbean44@gmail.com
+            </a>
+        </p>
+        </div>
+        <div class="contact-info-container">
+            <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon">
+        <p>
+            <a href="https://linked.com">
+                LinkedIn
+            </a>
+        </p>
+        </div>
+        <div class="contact-info-container">
+            <img src="./assets/phone-call.png" alt="Phone icon" class="icon">
+        <p>
+            <a href="tel:+8801766803932">
+                +880-1766-803932
+            </a>
+        </p>
+        </div>
+    </div>
+</section>
+
 
     <script src="./js/script.js"></script>
 </body>
