--- a/index.html
+++ b/index.html
@@ -289,6 +289,20 @@
     </div>
 </section>
 
+<footer>
+    <nav>
+        <div class="nav-links-container">
+            <ul class="nav-links">
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#experience" class="nav-link">Experience</a></li>
+                <li><a href="#projects" class="nav-link">Projetcs</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <p>Copyright &#169; 2023 Abdullah All Rights Reserved</p>
+</footer>
+
 
     <script src="./js/script.js"></script>
 </body>
