--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="profile">
         <div class="section__pic-container profile-pic-rounded">
-          <img src="./assets/profile-pic-3.png" alt="profile picture"/>
+          <img src="./assets/profile pic.png"/>
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello, I'm</p>
