--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             </button>
           </div>
           <div id="socials-container">
-            <img
+            <!-- <img
               src="./assets/linkedin.png"
               alt="My LinkedIn profile"
               class="icon"
               onclick="location.href='#'"
-            />
+            /> -->
             <img
               src="./assets/github.png"
               alt="My Github profile"
@@ -96,20 +96,23 @@
         <div class="about-details-container">
             <div class="about-container">
                 <div class="details-container">
-                    <img src="./assets/experience.png" alt="Experience icon" class="icon"/>
-                    <h3>Experience</h3>
-                    <p>2+ years <br>
-                    Frontend Development</p>
-                </div>
-                <div class="details-container">
                     <img src="./assets/education.png" alt="Education icon" class="icon"/>
                     <h3>Education</h3>
                     <p>Diploma in Engineering<br>
                     Compute Science</p>
                 </div>
+                <div class="details-container">
+                    <img src="./assets/experience.png" alt="Training icon" class="icon"/>
+                    <h3>Trainings</h3>
+                    <p>Full Stack Web Development<br>
+                    Using ASP.NET</p>
+                </div>
+                
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dicta assumenda doloremque id magnam repudiandae error qui aliquam sint recusandae. Corporis exercitationem quo reiciendis magni, molestias ab. Tempore odio sit voluptatibus earum et tenetur facilis beatae animi ducimus harum. Aliquam itaque veritatis dolore corporis officia porro quam eligendi adipisci consequatur.</p>
+                <p class="about-text">
+                    Complete hard worker who is looking for the perfect oppotunity to utilize my TRAININGS, MANAGEMENT, SUPERVISION & ADMINISTRATIVE skills to benefit mutual growth and success. I am a Diploma in Computer Engineering and I had some wonderful opportunities to be a part of <strong>WEB APP DEVELOPEMENT</strong> trainings and studies to become a successful Web Developer.
+                </p>
             </div>
         </div>
     </div>
@@ -118,9 +121,9 @@
 
 <section id="experience">
     <p class="section__text__p1">
-        Explore My
+        Working On
     </p>        
-    <h1 class="title">Experience</h1>
+    <h1 class="title">Technologies</h1>
     <div class="experience-details-container">
         <div class="about-container">
             <div class="details-container">
@@ -213,44 +216,48 @@
         <div class="about-container">
         <div class="details-container color-container">
             <div class="articel-container">
-                <img src="./assets/project-1.png" alt="project 1" class="project-img">
+                    <img src="./assets/amazon.jpg" alt="project 1" class="project-img">
+                    <img src="./assets/amazon2.jpg" alt="project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <p>Amazon clone using only Vanilla html, CSS and JavaScript</p>
+            <h2 class="experience-sub-title project-title">Amazon Website</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn js-project-link">
-                    Project One
+                <button class="btn btn-color-2 project-btn js-project-amazon-link">
+                    Github Link
                 </button>
-                <button class="btn btn-color-2 project-btn js-project-link">
-                    Live Demo
-                </button>
+                <!-- <button class="btn btn-color-2 project-btn js-project-link">
+                    Project Link
+                </button> -->
             </div>
         </div>
         <div class="details-container color-container">
             <div class="articel-container">
-                <img src="./assets/project-2.png" alt="project 1" class="project-img">
+                <img src="./assets/youtube1.jpg" alt="project 1" class="project-img">
+                <img src="./assets/youtube2.jpg" alt="project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <p>Youtube clone using Vanilla html & CSS</p>
+            <h2 class="experience-sub-title project-title">Youtube Clone</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn js-project-link">
-                    Project Two
+                <button class="btn btn-color-2 project-btn js-project-youtube-link">
+                    Github Link
                 </button>
-                <button class="btn btn-color-2 project-btn js-project-link">
+                <!-- <button class="btn btn-color-2 project-btn js-project-link">
                     Live Demo
-                </button>
+                </button> -->
             </div>
         </div>
         <div class="details-container color-container">
             <div class="articel-container">
                 <img src="./assets/project-3.png" alt="project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Project Three</h2>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn js-project-link">
                     Project Three
                 </button>
-                <button class="btn btn-color-2 project-btn js-project-link">
+                <!-- <button class="btn btn-color-2 project-btn js-project-link">
                     Live Demo
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
@@ -270,14 +277,14 @@
             </a>
         </p>
         </div>
-        <div class="contact-info-container">
+        <!-- <div class="contact-info-container">
             <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon">
         <p>
             <a href="https://linked.com">
                 LinkedIn
             </a>
         </p>
-        </div>
+        </div> -->
         <div class="contact-info-container">
             <img src="./assets/phone-call.png" alt="Phone icon" class="icon">
         <p>
