update 3rd projects

--- a/index.html
+++ b/index.html
@@ -248,12 +248,13 @@
         </div>
         <div class="details-container color-container">
             <div class="articel-container">
-                <img src="./assets/project-3.png" alt="project 1" class="project-img">
+                <img src="./assets/weatherApp.jpg" alt="project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <p>Live weather application using Vanilla html, css & javascript</p>
+            <h2 class="experience-sub-title project-title">Live Weather App</h2>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn js-project-link">
-                    Project Three
+                    Weather App
                 </button>
                 <!-- <button class="btn btn-color-2 project-btn js-project-link">
                     Live Demo
