--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <nav id="desktop-nav">
         <div class="logo">ABDULLAH</div>
-        <div>
+        <div class="nav-menu">
             <ul class="nav-links">
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#projects" class="nav-link">Projetcs</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
-
         </div>
+        <img class="dark-icon" src="./assets/moon.png" alt="">
     </nav>
 
     <nav id="hamburger-nav">
