setting dark theme styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/mediaqueries.css">
 </head>
 
-<body>
+<body class="dark-theme">
     <nav id="desktop-nav">
         <div class="logo">ABDULLAH</div>
         <div class="nav-menu">
@@ -20,7 +20,7 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
-        <img class="dark-icon" src="./assets/moon.png" alt="">
+        <img class="dark-icon js-dark-icon" src="./assets/moon.png" alt="">
     </nav>
 
     <nav id="hamburger-nav">
@@ -68,12 +68,6 @@
                 </button>
             </div>
             <div id="socials-container">
-                <!-- <img
-              src="./assets/linkedin.png"
-              alt="My LinkedIn profile"
-              class="icon"
-              onclick="location.href='#'"
-            /> -->
                 <img src="./assets/github.png" alt="My Github profile" class="icon js-github-profile" />
             </div>
         </div>
@@ -94,13 +88,13 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
                         <h3>Education</h3>
-                        <p>Diploma in Engineering<br>
+                        <p class="education-details">Diploma in Engineering<br>
                             Compute Science</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Training icon" class="icon" />
                         <h3>Trainings</h3>
-                        <p>Full Stack Web Development<br>
+                        <p class="training-details">Full Stack Web Development<br>
                             Using ASP.NET</p>
                     </div>
 
