add neccessary js to toogle dark theme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/mediaqueries.css">
 </head>
 
-<body class="dark-theme">
+<body>
     <nav id="desktop-nav">
         <div class="logo">ABDULLAH</div>
         <div class="nav-menu">
