--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav id="desktop-nav">
         <div class="logo">ABDULLAH</div>
-        <div class="nav-menu">
+        <div>
             <ul class="nav-links">
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
@@ -20,7 +20,9 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
         </div>
-        <img class="dark-icon js-dark-icon" src="./assets/moon.png" alt="">
+        <div class="dark-icon-position">
+            <img class="dark-icon js-dark-icon" src="./assets/moon.png" alt="">
+        </div>
     </nav>
 
     <nav id="hamburger-nav">
